Refactor StateMachine